# pr_bird_monitoring_station

./: .gitignore  BACKEND_NO_AUTH_REFACTOR_DESIGN.md  CERTIFICATION_SERVER_PROGRESS_CHECKLIST.md  CLIENT_AUTH_DESIGN_SPEC.md  CLIENT_DEVELOPMENT_PLAN.md  HOST_DOCKER_INTERNAL_FIX_REPORT.md  README.md  SYSTEM_AUTH_STARTUP_CHAIN_DESIGN.md  SYSTEM_BACKEND_LAYER_REFACTOR_DRAFT.md  SYSTEM_BACKEND_PROGRESS_TIMELINE.md  SYSTEM_BACKEND_ROUTE_PROTO_BASELINE.md  SYSTEM_BACKEND_STARTUP_PROGRESS_TIMELINE.md  SYSTEM_BOOTSTRAP_CREDENTIAL_DISCOVERY_PHASE_PLAN.md  SYSTEM_BOOTSTRAP_TO_REGISTRY_PHASE_PLAN.md  SYSTEM_BUSINESS_MODEL_DESIGN.md  SYSTEM_EXTERNAL_INTERFACE_CATALOG_DESIGN.md  SYSTEM_GATEWAY_BOOTSTRAP_CREDENTIAL_DISCOVERY_PHASE_PLAN.md  SYSTEM_GATEWAY_BUSINESS_FORWARDING_DESIGN.md  SYSTEM_GLOBAL_BASELINE_DESIGN.md  SYSTEM_INTERNAL_ASSERTION_REFACTOR_CHECKLIST.md  SYSTEM_INTERNAL_ASSERTION_SIMPLIFIED_DESIGN.md  SYSTEM_NO_AUTH_STARTUP_CHAIN_DESIGN.md  SYSTEM_PROTO_MINIMAL_FREEZE.md  SYSTEM_REGISTRY_STARTUP_CHAIN_FREEZE.md  SYSTEM_ROUTE_MAPPING_STRATEGY_FREEZE.md  docker-compose.yml  repair_host_docker_internal.ps1  鸟类监测系统 Flutter 客户端原型设计文档.md
api_service/: API_SERVICE_DESIGN_SPEC.md  README.md  main.py  pyproject.toml  settings.toml
api_service/src/app/: app.py  forwarded_auth_assembly.py  internal_assertion_assembly.py  lifecycle.py
api_service/src/models/: config.py  models.py
api_service/src/repo/: etcd_client.py  mongo_client.py  mysql_client.py  mysql_dao.py  redis_store.py
api_service/src/services/: secret_key_svc.py
api_service/src/utils/: circuit_breaker.py  crypto_utils.py  selector_policy.py
data_server/: main.py  pyproject.toml  settings.toml
data_server/src/app/: lifecycle.py
data_server/src/repo/: etcd_client.py  mysql_dao.py
data_server/src/utils/: circuit_breaker.py  crypto_utils.py
data_server/tests/: fix_device_name.py  test_auth_authority_token_refresh_rpc_client.py  test_monitoring_confidence_filtering.py
data_worker/: DATA_WORKER_DESIGN_SPEC.md  README.md  main.py  pyproject.toml  settings.toml
data_worker/src/app/: lifecycle.py
data_worker/src/models/: config.py
data_worker/src/repo/: etcd_client.py  mongo_client.py  mysql_client.py  mysql_dao.py  redis_store.py
data_worker/src/utils/: circuit_breaker.py  crypto_utils.py  selector_policy.py
data_worker/tests/: test_business_forward_servicer.py  test_credential_flow.py
edge_server/: EDGE_AUTH_DESIGN_SPEC.md  EDGE_GATEWAY_CHANNEL_INTERFACE_CONTRACT.md  EDGE_WORKFLOW_SPEC.md  MODEL_CONTRACT_SPEC.md  README.md  main.py  pyproject.toml  settings.toml
edge_server/src/: auth_interface.py  interface.py
edge_server/src/iface/: auth_interface.py  upload_interface.py  workflow_interface.py
edge_server/src/ignitor/: camera_module.py  capture_module.py  environment_module.py  factory.py  func.py  sensor_module.py
edge_server/tests/: README.md  TEST_RESULTS.md  batch_upload_photos.py  debug_bootstrap.py  test_auth_coordinator_refresh.py  test_auth_transport_bootstrap.py  test_bootstrap_auth_flow.py  test_capture_rate_constraints.py  test_edge_upload_flow.py  test_hardware_adapters.py  test_main_entrypoint.py  test_pipeline_logging.py
model_trainer/: README.md  pyproject.toml  settings.toml
model_trainer/src/: __init__.py  cli.py  comparator.py  config.py  datasets.py  engine.py  logger.py  model_factory.py
(+737 files in other folders)
