[project]
name = "api-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "beanie>=2.0.1",
    "etcd3>=0.12.0",
    "grpcio>=1.78.0",
    "msgspec>=0.20.0",
    "pydantic>=2.12.5",
    "redis>=7.3.0",
]
