[project]
name = "data-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "beanie>=2.0.1",
    "argon2-cffi>=23.1.0",
    "cryptography>=46.0.5",
    "etcd3>=0.12.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "bcrypt>=4.2.0",
    "numpy>=1.26.0",
    "msgspec>=0.20.0",
    "protobuf>=6.33.6",
    "pydantic>=2.12.5",
    "redis>=7.3.0",
]
