[project]
name = "data-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "beanie>=2.0.1",
    "cryptography>=46.0.5",
    "etcd3aio>=0.3.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "numpy>=1.26.0",
    "msgspec>=0.20.0",
    "onnxruntime>=1.24.4",
    "pillow>=10.0.0",
    "protobuf>=6.33.6",
    "pydantic>=2.12.5",
    "redis>=7.3.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
