[project]
name = "edge-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"cryptography>=45.0.0",
	"onnxruntime>=1.24.4",
	"pillow>=10.0.0",
	"psutil>=5.9.8",
	"timm>=1.0.12",
	"torch>=2.6.0",
	"torchvision>=0.21.0",
	"ultralytics>=8.3.0",
	"gpiozero; sys_platform == 'linux'",
	"picamera2; sys_platform == 'linux' and (platform_machine == 'armv7l' or platform_machine == 'aarch64')",
]

[tool.uv.sources]
torch = [
	{ index = "pytorch-cu124", marker = "(sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'" },
]
torchvision = [
	{ index = "pytorch-cu124", marker = "(sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'" },
]

[tool.uv]
required-environments = [
	"sys_platform == 'linux' and platform_machine == 'aarch64'",
	"sys_platform == 'linux' and platform_machine == 'x86_64'",
	"sys_platform == 'win32'",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
